--- a/service.html
+++ b/service.html
@@ -35,7 +35,35 @@
             </li>
             </div>
     </section>
+    <section id="main">
+        <div class="container space-between">
+            <div class="left">
+                <h4>Services</h4>
+                <div class="website">
+                    <h4>Website Design</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, viverra sit amet ultrices at, vilputate
+                        id Lorem. Nulla facilisi</p>
+                    <p>pricing $1,000-$3,000.
+                    </p>
 
+
+                </div>
+                <div class="website">
+                    <h4>Website Maintanance</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, viverra sit amet ultrices at, vilputate
+                        id Lorem. Nulla facilisi </p>
+                    <p>pricing $250 per month</p>
+                </div>
+                <div class="website">
+                    <h4>Website Hosting</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, viverra sit amet ultrices at, vilputate
+                        id Lorem. Nulla facilisi</p>
+                    <p>pricing $25 per month</p>
+                </div>
+            </div>
+            <aside>
+                <div>
     <footer>
         <h4>Aceme Web Design @ 2017</h4>
     </footer>
